# bakend-django-HardQode

./: README.md  pyproject.toml
education/: manage.py
education/api/: permissions.py  serializers.py  urls.py  views.py
education/data/: products.csv  users.csv
education/education/: asgi.py  settings.py  urls.py
education/products/: admin.py  constants.py  models.py  signals.py  utils.py  views.py
education/products/management/commands/: import_csv.py
education/products/migrations/: 0001_initial.py  0002_auto_20240228_2050.py
